Changing to list.of version